force-app/main/default/objects/dca_mass_action__Mass_Action_Configuration__c/dca_mass_action__Mass_Action_Configuration__c.object-meta.xml
<CustomObject>
    <description>A configuration of inputs (reports, list views, queries) and actions (process builder, flows, apex) that can be scheduled.
https://github.com/douglascayers-org/sfdx-mass-action-scheduler/wiki/</description>
    <label>Mass Action Configuration</label>
    <nameField>
        <label>Mass Action Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mass Action Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>