force-app/main/default/objects/dca_mass_action__Mass_Action_Configuration__c/fields/dca_mass_action__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Named_Credential__c</fullName>
    <description>The Named Credential that provides authentication to Salesforce REST API when invoking target actions. This will be the running user for the record updates.</description>
    <inlineHelpText>The Named Credential that provides authentication to Salesforce REST API when invoking target actions. This will be the context user for the record updates.</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>