force-app/main/default/objects/dca_mass_action__Mass_Action_Configuration__c/listViews/dca_mass_action__All.listView-meta.xml
<ListView>
    <fullName>dca_mass_action__All</fullName>
    <columns>NAME</columns>
    <columns>dca_mass_action__Active__c</columns>
    <columns>dca_mass_action__Schedule_Frequency__c</columns>
    <columns>dca_mass_action__Source_Type__c</columns>
    <columns>dca_mass_action__Source_Report_ID__c</columns>
    <columns>dca_mass_action__Target_Type__c</columns>
    <columns>dca_mass_action__Last_Run_Completed_Date__c</columns>
    <columns>dca_mass_action__Target_Action_Name__c</columns>
    <columns>dca_mass_action__Batch_Size__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dca_mass_action__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>